--- a/style.css
+++ b/style.css
@@ -232,10 +232,15 @@ a{
 	}
 .platform:hover{
 	animation-play-state:paused;
+	-webkit-animation-play-state:paused;
 	}
 
 /* giving animation to platform to rotate */
 @keyframes anim3{
+	0%{transform:rotateY(0deg);}
+	100%{transform:rotateY(360deg);}
+}
+@-webkit-keyframes anim3{
 	0%{transform:rotateY(0deg);}
 	100%{transform:rotateY(360deg);}
 }
