--- a/style.css
+++ b/style.css
@@ -68,6 +68,9 @@
 	-webkit-animation-iteration-count: infinite;
 	-webkit-animation-direction: alternate;
   transition-timing-function: linear;
+  -webkit-transition-timing-function: linear;
+  -o-transition-timing-function: linear;
+  -moz-transition-timing-function: linear;
 }
 
 @keyframes anim{
@@ -227,22 +230,23 @@ a{
 	position:relative;
 	top:100px;
 	transform-style:preserve-3d;
-	animation: anim3 10s infinite linear;
+	-webkit-animation: anim3 10s infinite linear;
+  animation: anim3 10s infinite linear;
   margin:0 auto;
 	}
 .platform:hover{
 	animation-play-state:paused;
-	-webkit-animation-play-state:paused;
+  -webkit-animation-play-state:paused;
 	}
 
 /* giving animation to platform to rotate */
 @keyframes anim3{
-	0%{transform:rotateY(0deg);}
-	100%{transform:rotateY(360deg);}
+	0%{transform:rotateY(0deg);-webkit-transform:rotateY(0deg);}
+	100%{transform:rotateY(360deg);-webkit-transform:rotateY(360deg);}
 }
 @-webkit-keyframes anim3{
-	0%{transform:rotateY(0deg);}
-	100%{transform:rotateY(360deg);}
+  0%{transform:rotateY(0deg);-webkit-transform:rotateY(0deg);}
+	100%{transform:rotateY(360deg);-webkit-transform:rotateY(360deg);}
 }
 
 .platform .face1 , .face2 ,.face3 , .face4 ,.face5 , .face6,.face7 , .face8 ,.face9 , .face10 ,.face11 , .face12{
@@ -253,50 +257,74 @@ a{
 .face1{
 	background-image: url("https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_1.jpg");
 	transform:translateZ(100px);
+  -webkit-transform:translateZ(100px);
+  -moz-transform:translateZ(100px);
 	}
 .face2{
   background-image: url("https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_2.jpg");
 	transform:rotateY(60deg) translateZ(100px);
+  -webkit-transform:rotateY(60deg) translateZ(100px);
+  -moz-transform:rotateY(60deg) translateZ(100px);
 	}
 .face3{
   background-image: url("https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_3.jpg");
 	transform:rotateY(120deg) translateZ(100px);
+  -webkit-transform:rotateY(120deg) translateZ(100px);
+  -moz-transform:rotateY(120deg) translateZ(100px);
 	}
 .face4{
   background-image: url("https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_4.jpg");
 	transform:rotateY(180deg) translateZ(100px);
+  -webkit-transform:rotateY(180deg) translateZ(100px);
+  -moz-transform:rotateY(180deg) translateZ(100px);
 	}
 .face5{
   background-image: url("https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_5.jpg");
 	transform:rotateY(240deg) translateZ(100px);
+  -webkit-transform:rotateY(240deg) translateZ(100px);
+  -moz-transform:rotateY(240deg) translateZ(100px);
 	}
 .face6{
   background-image: url("https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_6.jpg");
 	transform:rotateY(300deg) translateZ(100px);
+  -webkit-transform:rotateY(300deg) translateZ(100px);
+  -moz-transform:rotateY(300deg) translateZ(100px);
 	}
 .face7{
 	background-image: url("https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/granite-animation/granite-animation-1.jpg");
-	transform:translateZ(100px);
+  transform:translateZ(100px);
+  -webkit-transform:translateZ(100px);
+  -moz-transform:translateZ(100px);
 	}
 .face8{
   background-image: url("https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/granite-animation/granite-animation-2.jpg");
-	transform:rotateY(60deg) translateZ(100px);
+  transform:rotateY(60deg) translateZ(100px);
+  -webkit-transform:rotateY(60deg) translateZ(100px);
+  -moz-transform:rotateY(60deg) translateZ(100px);
 	}
 .face9{
   background-image: url("https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/granite-animation/granite-animation-3.jpg");
-	transform:rotateY(120deg) translateZ(100px);
+  transform:rotateY(120deg) translateZ(100px);
+  -webkit-transform:rotateY(120deg) translateZ(100px);
+  -moz-transform:rotateY(120deg) translateZ(100px);
 	}
 .face10{
   background-image: url("https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/granite-animation/granite-animation-4.jpg");
-	transform:rotateY(180deg) translateZ(100px);
+  transform:rotateY(180deg) translateZ(100px);
+  -webkit-transform:rotateY(180deg) translateZ(100px);
+  -moz-transform:rotateY(180deg) translateZ(100px);
 	}
 .face11{
   background-image: url("https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/granite-animation/granite-animation-5.jpg");
-	transform:rotateY(240deg) translateZ(100px);
+  transform:rotateY(240deg) translateZ(100px);
+  -webkit-transform:rotateY(240deg) translateZ(100px);
+  -moz-transform:rotateY(240deg) translateZ(100px);
 	}
 .face12{
   background-image: url("https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/granite-animation/granite-animation-6.jpg");
-	transform:rotateY(300deg) translateZ(100px);
+  transform:rotateY(300deg) translateZ(100px);
+  -webkit-transform:rotateY(300deg) translateZ(100px);
+  -moz-transform:rotateY(300deg) translateZ(100px);
 	}
 
   .marble-content{
